--- a/css/list-courses.css
+++ b/css/list-courses.css
@@ -1,24 +1,79 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
-
-/* corregir todo este pedo con un buen curso de flexbox */
-.container {
-    display: grid;
-    background: #fff;
-    border-radius: 16px;
-    width: 90%;
-    max-width: 1000px;
-    margin: 20px auto;
-    grid-gap: 20px;
-    grid-template-columns: repeat(3,minmax(100px,1fr));
-    grid-template-rows: repeat(1,auto);
-    grid-template-areas:"title-card title-card title-card"
-                        ;
-
-    
+/*Cards*/
+.container-card{
+	width: 100%;
+	display: flex;
+	max-width: 1100px;
+	margin: auto;
 }
-.container .title-card{
-    grid-area: title-card;
+.title-cards{
+	width: 100%;
+	max-width: 1080px;
+	margin: auto;
+	padding: 20px;
+	margin-top: 20px;
+	text-align: center;
+	color: #7a7a7a;
 }
+.card{
+	width: 100%;
+	margin: 20px;
+	border-radius: 6px;
+	overflow: hidden;
+	background:#fff;
+	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+	transition: all 400ms ease-out;
+	cursor: default;
+}
+.card:hover{
+	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+	transform: translateY(-3%);
+}
+.card img{
+	width: 100%;
+	height: 210px;
+}
+.card .contenido-card{
+	padding: 15px;
+	text-align: center;
+}
+.card .contenido-card h3{
+	margin-bottom: 15px;
+	color: #7a7a7a;
+}
+.card .contenido-card p{
+	line-height: 1.8;
+	color: #6a6a6a;
+	font-size: 14px;
+	margin-bottom: 5px;
+}
+.card .contenido-card a{
+	display: inline-block;
+	padding: 10px;
+	margin-top: 10px;
+	text-decoration: none;
+	color: hsl(167, 49%, 53%);
+	border: 1px solid hsl(167, 49%, 53%);
+	border-radius: 4px;
+	transition: all 400ms ease;
+	margin-bottom: 5px;
+}
+.card .contenido-card a:hover{
+	background: hsl(167, 55%, 55%);
+	color: #fff;
+}
+@media only screen and (min-width:320px) and (max-width:768px){
+	.container-card{
+		flex-wrap: wrap;
+	}
+	.card{
+		margin: 15px;
+	}
+}
+/*Fin-Cards*/
